figma-kit/src/components/dialog.base/dialog.base.css
.fp-DialogBaseContent {
  font-family: var(--font-family-default);
  color: var(--figma-color-text);
  background-color: var(--figma-color-bg);
  border-radius: var(--radius-large);
  box-shadow: var(--elevation-500);
  overflow-y: auto;
  outline: 0;
  z-index: 1;
}

.fp-DialogBaseHeader {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  height: var(--space-10);
  padding: var(--space-1) var(--space-2);
  border-bottom: 1px solid var(--figma-color-border);
  background-color: var(--figma-color-bg);
}

.fp-DialogBaseTitle {
  padding-left: var(--space-2);
}

.fp-DialogBaseControls {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.fp-DialogBaseSection {
  box-sizing: border-box;
  padding: var(--space-4);
  border-bottom: 1px solid var(--figma-color-border);

  &:where(:last-child) {
    border-bottom: 0;
  }

  &:where(.fp-DialogBaseSection-base) {
    padding: var(--space-4);
  }

  &:where(.fp-DialogBaseSection-small) {
    padding: var(--space-2) var(--space-4);
  }
}

.fp-DialogBaseOverlay {
  position: fixed;
  inset: 0;
  background-color: var(--color-overlay-dialog);
  z-index: 1;
}

